chapter_04/allow-egress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: svelte-frontend
  egress:
    - to:
        - ipBlock:
            cidr: 172.11.0.0/20
