chapter_04/allow-ingress.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-pods-in-namespace
spec:
  podSelector:
    matchLabels:
      app: quote-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: learning-resources
      ports:
        - port: 80
